BB-110: openapi update; regenerated client; added contract (cosnumer) tests;
